testnet keys are OK to publish

--- a/index.html
+++ b/index.html
@@ -120,9 +120,9 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/stellar-sdk/13.1.0/stellar-sdk.js"></script>
   <script>
-    const PUBLIC_KEY = "";
-    const SECRET_KEY = "";
-    const CONTRACT_ID = "CCKVWLTUTB7DAWYAZXJFNZPU6UGHVWQXKAARSUEUCUEKZ7XWJ4XT7MTL";
+    const PUBLIC_KEY = "GAAKIZ6JZXDTJLPG3JTJC77HLBOWQJ672DTSYV77QB7NV3R3MHEH4CZK";
+    const SECRET_KEY = "SC6OGIORE7HQF5K6XOPFE4LX5222YOVGI3DKZRZF4VTZOK4CCSKELUK3";
+    const CONTRACT_ID = "CASEN2ZFCC5MY3QQSWPFPGZZIM3VM5GSTASKBKO7AO7UCFH4NJ2PGGOA";
 
     const rpc = new StellarSdk.rpc.Server('https://soroban-testnet.stellar.org');
     const contract = new StellarSdk.Contract(CONTRACT_ID);
